--- a/src/renderer/css/main.css
+++ b/src/renderer/css/main.css
@@ -59,7 +59,7 @@ body {
     cursor: text;
 }
 
-.snackbar{
+.snackbar {
     z-index: 5;
 }
 
@@ -69,6 +69,10 @@ body {
     height: var(--menu-height);
     top: 0;
     background-color: var(--panel-color);
+}
+
+.disconnect-button {
+    display: none;
 }
 
 .menu button {
@@ -106,7 +110,8 @@ body {
     height: calc(100% - var(--chat-input-height));
 }
 
-.main-inner .mdc-card {
+.main-inner .mdc-card,
+.chat-panel {
     background-color: var(--panel-color);
 }
 
@@ -164,11 +169,34 @@ body {
 }
 
 .chat-panel {
+    overflow-y: auto;
     position: relative;
     width: calc(100% - var(--panel-margin) * 2);
     margin: var(--panel-margin);
     margin-top: calc(var(--panel-margin) / 2);
     height: calc(var(--chat-panel-ratio) - var(--panel-margin) * 1.5);
+}
+
+.chat-message {
+    display: block;
+    position: relative;
+    padding: 2px 10px;
+    border-radius: 2px;
+    font-size: 14px;
+}
+
+p.chat-text {
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.chat-panel .chat-user {
+    font-weight: light;
+}
+
+.chat-panel .right {
+    text-align: right;
 }
 
 .chat-input {
