--- a/src/renderer/css/main.css
+++ b/src/renderer/css/main.css
@@ -32,7 +32,7 @@
     -ms-user-select: none;
     user-select: none;
     cursor: default;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     padding: 0;
@@ -79,6 +79,21 @@ body {
 .menu button {
     padding: 2px 20px;
     margin: 2px;
+}
+
+.menu button i {
+    animation-duration: 500ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(0.25, 0.1, 0.67, 0.81);
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
 }
 
 .mdc-button i {
@@ -163,6 +178,11 @@ body {
     height: calc(100% - var(--panel-margin) * 1.5);
     width: calc(100% - var(--rooms-panel-ratio) - var(--panel-margin) * 1.5);
     margin: var(--panel-margin) var(--panel-margin) calc(var(--panel-margin) / 2) calc(var(--panel-margin) / 2);
+}
+
+canvas.voice-visualizer {
+    width: 100%;
+    height: 100%;
 }
 
 .chat-panel {
