microphone and speakers toggle button added, fixed robot voice

--- a/src/renderer/css/main.css
+++ b/src/renderer/css/main.css
@@ -72,7 +72,9 @@ body {
     background-color: var(--panel-color);
 }
 
-.disconnect-button {
+.disconnect-button,
+.speakers-toggle,
+.microphone-toggle {
     display: none;
 }
 
